style and ui updated

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         </form>
 
     </div>
+    <div id="btns-div">
+        <button id="save">Save</button>
+        <button id="export">Export</button>
+
+    </div><br>
+    <hr>
     <div id="output">
         <table id="table">
             <thead id="thead">
