style and th updated

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <table id="table">
             <thead id="thead">
                 <tbody id="tbody">
+                    <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th></tr>
                     
                 </tbody>
             </thead>
