--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <table id="table">
             <thead id="thead">
                 <tbody id="tbody">
-                    <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th></tr>
+                    <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th><th>Modify</th></tr>
                     
                 </tbody>
             </thead>
