--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </div>
     <div id="btns-div">
-        <button id="save">Save</button>
+        <button type="submit" id="save">Save</button>
         <button id="export">Export</button>
 
     </div><br>
@@ -38,11 +38,11 @@
     <div id="output">
         <table id="table">
             <thead id="thead">
+                <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th><th>Modify</th></tr>
+                </thead>
+                
                 <tbody id="tbody">
-                    <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th><th>Modify</th></tr>
-                    
                 </tbody>
-            </thead>
         </table>
     </div>
 	<script src="script.js"></script> 
