--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 </thead>
                 
                 <tbody id="tbody">
+                    <tr><td>Satinder</td><td>Sartaj</td><td>sati@gmail.com</td><td>643112565</td></tr>
+
                 </tbody>
         </table>
     </div>
