done importing csv content

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     </div>
     <div id="btns-div">
         <button id="save">Save</button>
-        <button id="export">Export</button>
-        
+        <button id="export">Export</button>        
     </div><br>
+    <div class="centerdiv"><input type="file" id="csvFileInput" accept=".csv">
+        <button id="import">Import CSV</button></div><br>
     <hr>
     <div id="output">
         <table id="table">
