added basic conce[pt of grabbing data

--- a/index2.html
+++ b/index2.html
@@ -35,10 +35,11 @@
 	</td>
 	
 	<td class="tdm">
-        <table>
-        <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th></tr>
-        
-        </table>
+        <table id="table2">
+            <tbody>
+                <tr><th>First Name</th><th>Surname</th><th>Email</th><th>Contact</th></tr>
+            </tbody>
+          </table>
 	
 	</td>
 </tr>
