check import function

--- a/index2.html
+++ b/index2.html
@@ -30,6 +30,12 @@
         <tr id="btns">
         <td><button id="save" type="button">Save</button></td><td><button id="export" type="button">Export</button></td>
         </tr>
+        <tr><td>
+            <input id="csvFileInput" type="file" accept=".csv">
+            <label for="csvFileInput" class="csvFileInput">Choose File</label></td>
+            <td>
+                <button id="import" type="button">Import</button></td></tr>
+            </td>
         </table>
 	
 	</td>
