--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracking App</title>
+    <link rel="stylesheet" href="expensive.css">
 </head>
 <body>
+
+    <header class="inputs">
+        <input class="common" type="text" id="expense_name">
+        <input class="common" type="number" id="amount">
+        <select class="common" name="Select Category" id="expenseAt">Select Category
+            <option value="Food">Food</option>
+            <option value="Transport">Transport</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Education">Education</option>
+            <option value="Health">Health </option>
+        </select>
+        <input class="common" type="date" name="Date" id="date">
+        <button class="common" type="submit">Add Expense</button>
+    </header>
     
+
+
+
+    <script src="expensive.js"></script>
 </body>
 </html>
