--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -9,19 +9,19 @@
 <body>
 
     <header class="inputs">
-        <input class="common" type="text" id="expense_name">
-        <input class="common" type="number" id="amount">
-        <select class="common" name="Select Category" id="expenseAt">Select Category
+        <input id="Name" class="common" type="text" id="expense_name" placeholder="Expense Name">
+        <input id="value" class="common" type="number" id="amount" placeholder="Expense Amount">
+        <select id="type" class="common" name="Select Category" id="expenseAt">Select Category
             <option value="Food">Food</option>
             <option value="Transport">Transport</option>
             <option value="Entertainment">Entertainment</option>
             <option value="Education">Education</option>
             <option value="Health">Health </option>
         </select>
-        <input class="common" type="date" name="Date" id="date">
-        <button class="common" type="submit">Add Expense</button>
+        <input id="time" class="common" type="date" name="Date" id="date">
+        <button id="addExpense" type="submit">Add Expense</button>
     </header>
-    
+    <div class="output"></div>
 
 
 
