--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -9,19 +9,21 @@
 <body>
 
     <header class="inputs">
-        <input id="Name" class="common" type="text" id="expense_name" placeholder="Expense Name">
-        <input id="value" class="common" type="number" id="amount" placeholder="Expense Amount">
-        <select id="type" class="common" name="Select Category" id="expenseAt">Select Category
+        <input id="name" class="common" type="text"placeholder="Expense Name">
+        <input id="value" class="common" type="number"placeholder="Expense Amount">
+        <select id="type" class="common" name="Select Category">Select Category
             <option value="Food">Food</option>
             <option value="Transport">Transport</option>
             <option value="Entertainment">Entertainment</option>
             <option value="Education">Education</option>
             <option value="Health">Health </option>
         </select>
-        <input id="time" class="common" type="date" name="Date" id="date">
+        <input id="time" class="common" type="date" name="Date">
         <button id="addExpense" type="submit">Add Expense</button>
     </header>
-    <div class="output"></div>
+    <table id="table">
+        <tbody></tbody>
+    </table>
 
 
 
