--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -23,9 +23,8 @@
     </header>
     <table id="table">
         <tbody></tbody>
-        <tbody></tbody>
     </table>
-    
+    <h2 id="totalExpenses"></h2>
 
 
 
