--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -11,8 +11,9 @@
     <header class="inputs">
         <input id="name" class="common" type="text"placeholder="Expense Name">
         <input id="value" class="common" type="number"placeholder="Expense Amount">
-        <select id="type" class="common" name="Select Category">Select Category
-            <option value="Food">Food</option>
+        <select id="type" class="common"  name="Category"> 
+                        <option value="" disabled selected>Select Category</option>
+                        <option value="Food">Food</option>
             <option value="Transport">Transport</option>
             <option value="Entertainment">Entertainment</option>
             <option value="Education">Education</option>
@@ -24,7 +25,17 @@
     <table id="table">
         <tbody></tbody>
     </table>
-    <h2 id="totalExpenses"></h2>
+    <div class="output">
+
+        <h2 id="totalExpenses"></h2>
+        <select name="filter Category" id="category">
+            <option value="" disabled selected>Filter category</option>
+            <option value="Transport">Transport</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Education">Education</option>
+            <option value="Health">Health </option>
+        </select>
+    </div>
 
 
 
