--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -41,7 +41,7 @@
         <div class="filterExpenses">
             <label for="categoryFilter">Filter By Category:&nbsp;&nbsp;&nbsp;</label>
             <select name="filterCategory" id="categoryFilter">
-                <option value="" disabled selected>All</option>
+                <option value="">All</option>
                 <option value="Food">Food</option>
                 <option value="Transport">Transport</option>
                 <option value="Entertainment">Entertainment</option>
@@ -54,6 +54,6 @@
     </div>
 
     <!-- <script src="expensive.js"></script> -->
-    <script src="./expense.js"></script>
+    <script src="../expense.js"></script>
 </body>
 </html>
