--- a/expenseTrack.html
+++ b/expenseTrack.html
@@ -53,7 +53,7 @@
         <p id="filteredExpenses">Total [Selected Category] Expenses: $0.00</p>
     </div>
 
-    <!-- <script src="expensive.js"></script> -->
-    <script src="../expense.js"></script>
+    <script src="expensive.js"></script>
+    
 </body>
 </html>
